# robotsito

./: README.md  freestyle.py  walk.py
freecad_models/: core.FCStd  lower_leg.FCStd  middle_leg.FCStd  upper_leg.FCStd
freecad_models/Battery/: BatterySupport.20240308-230021.FCBak  BatterySupport2.20240316-215659.FCBak  BatterySupport2.FCStd  battery.step
freecad_models/Legs/: leg_new_v1.FCStd  leg_new_v2.FCStd  leg_new_v3.FCStd  leg_tip.FCStd
freecad_models/Materials/Battery/: BatterySupport.FCStd  BatterySupport2.20240308-231239.FCBak
freecad_models/Materials/DM996/: DM996.20240125-002728.FCBak  DM996.FCStd  DM996.stl
freecad_models/Materials/microservo9g/: MIUZEI_MS18_9G.CATPart
freecad_models/meshes/: core.dae  core.stl  lower_leg.stl  middle_leg.stl  upper_leg.dae  upper_leg.stl
freecad_models/microservo9g/: MIUZEI_MS18_9G.stp
robotsito_ws/: .gitignore  Dockerfile  update_setup_scripts.sh
robotsito_ws/gz_ws/src/custom_bridge/: package.xml  setup.cfg  setup.py
robotsito_ws/gz_ws/src/custom_bridge/config/: custom_bridge.yaml
robotsito_ws/gz_ws/src/custom_bridge/launch/: custom_bridge_launch.py
robotsito_ws/gz_ws/src/plugins/: CMakeLists.txt  inertia_calculator.py  package.xml  robot.sdf  world.sdf
robotsito_ws/gz_ws/src/plugins/include/: ThreadPool.h
robotsito_ws/gz_ws/src/plugins/models/core/: core.sdf  model.config
robotsito_ws/gz_ws/src/plugins/models/lower_leg/: leg.sdf  model.config
robotsito_ws/gz_ws/src/plugins/models/meshes/: core.dae  dm996.dae  lower_leg.dae  middle_leg.dae  miuzei9g.dae  upper_leg.dae
robotsito_ws/gz_ws/src/plugins/models/middle_leg/: leg.sdf  model.config
robotsito_ws/gz_ws/src/plugins/models/miuzei9g/: model.config  servo.sdf
robotsito_ws/gz_ws/src/plugins/models/upper_leg/: leg.sdf  model.config
robotsito_ws/gz_ws/src/plugins/src/: JointPlugin copy.cpp  JointPlugin.cpp
robotsito_ws/ros_ws/src/custom_action_interfaces/: CMakeLists.txt  package.xml
robotsito_ws/ros_ws/src/custom_action_interfaces/action/: ServoLegs.action
robotsito_ws/ros_ws/src/servos_node/: package.xml  setup.py
robotsito_ws/ros_ws/src/servos_node/servos_node/: servo_controller_client.py  servo_controller_server.py
robotsito_ws/src/custom_action_interfaces/: package.xml
robotsito_ws/src/custom_action_interfaces/action/: ServoLegs.action
robotsito_ws/src/gz_plugins/: robot.sdf  world.sdf
robotsito_ws/src/gz_plugins/src/: JointPlugin.cpp
robotsito_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
robotsito_ws/src/install/custom_action_interfaces/share/custom_action_interfaces/: package.bash  package.zsh
robotsito_ws/src/log/: latest_build
robotsito_ws/src/servos_node/: package.xml  setup.cfg  setup.py
robotsito_ws/src/servos_node/launch/: move_leg_launch.py
robotsito_ws/src/servos_node/servos_node/: servo_controller_client.py  servo_controller_server.py
