<?xml version="1.0"?>
<package format="3">
  <name>gz_plugins</name>
  <version>1.0.0</version>
  <description>The my_robot_gazebo_plugins package</description>

  <maintainer email="javi.rm2005@gmail.com">Javideus</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>custom_action_interfaces</build_depend>
  <build_depend>gz-sim8</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_action</exec_depend>
  <exec_depend>custom_action_interfaces</exec_depend>
  <exec_depend>ros_gz</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

